WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259204
Unreviewed non-unified source builds fix 2023-07-14
https://bugs.webkit.org/show_bug.cgi?id=259204
Summary
Unreviewed non-unified source builds fix 2023-07-14
Fujii Hironori
Reported
2023-07-13 20:41:54 PDT
Unreviewed non-unified source builds fix 2023-07-14
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2023-07-13 20:44:24 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15831
EWS
Comment 2
2023-07-13 21:48:30 PDT
Committed
266055@main
(4e68a149e83d): <
https://commits.webkit.org/266055@main
> Reviewed commits have been landed. Closing PR #15831 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-07-13 21:49:18 PDT
<
rdar://problem/112244448
>
Fujii Hironori
Comment 4
2023-07-20 20:58:03 PDT
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/15968
EWS
Comment 5
2023-07-20 21:42:28 PDT
Committed
266198@main
(c107fc39707e): <
https://commits.webkit.org/266198@main
> Reviewed commits have been landed. Closing PR #15968 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug