Unreviewed non-unified source builds fix 2023-07-14 https://bugs.webkit.org/show_bug.cgi?id=259204

* Source/WebCore/Modules/cookie-store/CookieStore.cpp:
* Source/WebCore/fileapi/ThreadableBlobRegistry.cpp:
* Source/WebCore/fileapi/ThreadableBlobRegistry.h:
* Source/WebCore/html/LazyLoadImageObserver.cpp:
* Source/WebKit/UIProcess/API/APIFrameTreeNode.cpp:
* Source/WebKit/UIProcess/ProvisionalFrameProxy.cpp:

Canonical link: https://commits.webkit.org/266055@main