Source/WebKit/UIProcess/API/APIFrameTreeNode.cpp
@@ -26,6 +26,8 @@
 #include "config.h"
 #include "APIFrameTreeNode.h"
 
+#include "WebPageProxy.h"
+
 namespace API {
 
 FrameTreeNode::~FrameTreeNode() = default;
